explore CRS differences within region

--- a/landfast_seaice.ipynb
+++ b/landfast_seaice.ipynb
@@ -189,13 +189,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 136,
    "id": "8c9b64f8-e833-48af-ab91-b27ead390c01",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -203,7 +199,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[01;34m/atlas_scratch/kmredilla/ardac/landfast_seaice/Chukchi/1998-99/\u001b[0m\n",
+      "\u001b[01;34m/atlas_scratch/kmredilla/ardac/landfast_seaice//Chukchi/1998-99/\u001b[0m\n",
       "├── \u001b[01;32mlfiw.csv\u001b[0m\n",
       "├── \u001b[01;32mlfiw_moregmean.csv\u001b[0m\n",
       "├── \u001b[01;32mlfiw_moregstdev.csv\u001b[0m\n",
@@ -775,7 +771,7 @@
    "id": "2864a73d-ed57-4793-8131-61dc147bd777",
    "metadata": {},
    "source": [
-    "This doesn't appear to be the case given the values of 29 over land. This looks more similar to some of the following files:"
+    "This doesn't appear to be the case given the values of 29 over land. This looks more similar to some of the following files."
    ]
   },
   {
@@ -3891,13 +3887,177 @@
    "source": [
     "## Assemble SLIE\n",
     "\n",
-    "The SLIE data, being available for both regions, seems like a good place to start making a dataset. "
+    "The SLIE data, being available for both regions, seems like a good place to start making a dataset that we can ingest into Rasdaman. Make sure all of the geoTIFFs open and have the same metadata for a single region:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "ee7aa690-3941-4a30-a92b-110b0aeaa6a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_tif_meta(fp):\n",
+    "    with rio.open(fp) as src:\n",
+    "        meta = src.meta.copy()\n",
+    "    return meta\n",
+    "\n",
+    "meta_list = [read_tif_meta(fp) for fp in scratch_dir.glob(\"Chukchi/*/r*slie.tif\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "b3489144-3854-4bec-880b-d578d20edd1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.all(meta_list[0] == np.array(meta_list))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cd7b949-d278-4dd2-8fbe-c7b471ac074a",
+   "metadata": {},
+   "source": [
+    "It looks like some of these files have a different representation of the CRS within the same region!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "73ae26b8-b87c-4349-ac16-0ad2ab1af259",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([228, 229, 230, 231, 232, 233, 234, 235, 236, 237, 238, 239, 240,\n",
+       "        241, 242, 243, 244, 245, 246, 247, 248, 249, 250, 251, 252, 253,\n",
+       "        254, 255, 256, 257, 258, 259, 260, 261, 262, 263, 264, 265, 266,\n",
+       "        267, 268, 269, 270, 271, 272, 273, 274, 275, 276, 277, 278, 279,\n",
+       "        280, 281, 282, 283, 284]),)"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(meta_list[0] != np.array(meta_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "281dbd8c-4d80-47bf-9fb0-cbfb2bb402e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'driver': 'GTiff',\n",
+       " 'dtype': 'uint8',\n",
+       " 'nodata': None,\n",
+       " 'width': 6234,\n",
+       " 'height': 6271,\n",
+       " 'count': 1,\n",
+       " 'crs': CRS.from_epsg(3338),\n",
+       " 'transform': Affine(100.0, 0.0, -859401.4481000006,\n",
+       "        0.0, -100.0, 2423189.104800001)}"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "meta_list[228]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "3fa94247-ddc5-469d-b4b3-e6344ee04971",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'driver': 'GTiff',\n",
+       " 'dtype': 'uint8',\n",
+       " 'nodata': None,\n",
+       " 'width': 6234,\n",
+       " 'height': 6271,\n",
+       " 'count': 1,\n",
+       " 'crs': CRS.from_wkt('PROJCS[\"unnamed\",GEOGCS[\"NAD83\",DATUM[\"North_American_Datum_1983\",SPHEROID[\"GRS 1980\",6378137,298.257024882273,AUTHORITY[\"EPSG\",\"7019\"]],AUTHORITY[\"EPSG\",\"6269\"]],PRIMEM[\"Greenwich\",0],UNIT[\"degree\",0.0174532925199433,AUTHORITY[\"EPSG\",\"9122\"]],AUTHORITY[\"EPSG\",\"4269\"]],PROJECTION[\"Albers_Conic_Equal_Area\"],PARAMETER[\"latitude_of_center\",50],PARAMETER[\"longitude_of_center\",-154],PARAMETER[\"standard_parallel_1\",55],PARAMETER[\"standard_parallel_2\",65],PARAMETER[\"false_easting\",0],PARAMETER[\"false_northing\",0],UNIT[\"metre\",1,AUTHORITY[\"EPSG\",\"9001\"]],AXIS[\"Easting\",EAST],AXIS[\"Northing\",NORTH]]'),\n",
+       " 'transform': Affine(100.0, 0.0, -859401.4481000006,\n",
+       "        0.0, -100.0, 2423189.104800001)}"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "meta_list[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0170a729-2b53-4de3-9d0b-09b5e8605867",
+   "metadata": {},
+   "source": [
+    "However, they are the same grid, since they have the same affine transforms:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "a9f823ac-f4d0-4f94-bb54-d3b39584706f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.all(meta_list[0][\"transform\"] == np.array([meta_di[\"transform\"] for meta_di in meta_list]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5777b05-3368-48aa-8c4f-85c07d2e094f",
+   "metadata": {},
+   "source": [
+    "This appears to be just an unintentional inconsistency, perhaps introduced from using older versions of some geospatial software. It looks like some of the older years have an \"inverse flattening\" value that is not consistent with current version of the GRS 1980 Ellipsoid, which is 298.257222101 ([see here](https://epsg.org/crs_3338/NAD83-Alaska-Albers.html)). They instead have a value of 298.257024882273, so Rasterio's `crs.CRS` class does not recognize the WKT as corresponding to EPSG:3338. This might not pose a problem for ingest into rasdaman, but it is something that should be fixed before making the raw data available."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee7aa690-3941-4a30-a92b-110b0aeaa6a8",
+   "id": "7491e915-2270-4382-b762-44c9cf6a2bc8",
    "metadata": {},
    "outputs": [],
    "source": []
