proof text in markdown cells

--- a/seaice/landfast_NSIDC.ipynb
+++ b/seaice/landfast_NSIDC.ipynb
@@ -16,20 +16,20 @@
     "\n",
     "The dataset cited above contain two variables with different remote sensing origins.\n",
     "\n",
-    "## Landfast Sea Ice Exent\n",
+    "## Landfast Sea Ice Extent\n",
     "### What is Landfast Sea Ice?\n",
     "\n",
-    "The landfast sea ice data in this dataset are the same data analyzed by [Mahoney et al. (2007)](https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2006JC003559). Landfast ice is sea ice that is mostly stationary and attached to land. This dataset defines landfast ice as being continguous to the coast and lacking detectablel motion for approximately 20 days. This defintion is consistent with the defintion provided by Mahoney et al. (2005) and Mahoney et al. (2007).\n",
+    "The landfast sea ice data in this dataset are the same data analyzed by [Mahoney et al. (2007)](https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2006JC003559). Landfast ice is sea ice that is mostly stationary and attached to land. This dataset defines landfast ice as being contiguous to the coast and lacking detectable motion for approximately 20 days. This definition is consistent with the definition provided by Mahoney et al. (2005) and Mahoney et al. (2007).\n",
     "\n",
     "\n",
     "### Spatial Attributes\n",
     "The spatial domain of this dataset spans northern Alaska and northwestern Canada and includes the Beaufort and Chukchi Seas. Some small islands are excluded from the analysis. Note that the dataset analyzed in Mahoney et al. (2007) may contain a set of western Chukchi data that is not included in the NSIDC holdings. The native spatial resolution (i.e., pixel size) of these data is 100 m x 100 m.\n",
     "\n",
     "### Temporal Atrributes\n",
-    "Eight annnual (1996-2004) seasonal ice cycles (October to July) are included in these data.\n",
+    "Eight annual (1996-2004) seasonal ice cycles (October to July) are included in these data.\n",
     "\n",
     "### Origin\n",
-    "The landfast ice data are derived from RADARSAT-1 data aquired using the the moderate-resolution ScanSAR operation mode of the synthetic aperture radar (SAR) sensor. The  RADARSAT-1 mission (no longer active) used a C-Band (5.3 GHz), 5.6 cm wavelength, HH polarized microwave frequency to image the earth. RADARSAT-1 could \"detect\" landfast ice because it has a distinct backscatter signature. Indiviudal ScarSAR passes were mosaiced together to encompass the study area, with the entire study area being covered about once every 10 days. Data processing details are provided by [Eicken et al. (2006)](https://nsidc.org/sites/nsidc.org/files/files/data/noaa/g02173/eicken_leads_landfast_2006.pdf).\n",
+    "The landfast ice data are derived from RADARSAT-1 data acquired using the the moderate-resolution ScanSAR operation mode of the synthetic aperture radar (SAR) sensor. The  RADARSAT-1 mission (no longer active) used a C-Band (5.3 GHz), 5.6 cm wavelength, HH polarized microwave frequency to image the earth. RADARSAT-1 could \"detect\" landfast ice because it has a distinct backscatter signature. Individual ScarSAR passes were mosaicked together to encompass the study area, with the entire study area being covered about once every 10 days. Data processing details are provided by [Eicken et al. (2006)](https://nsidc.org/sites/nsidc.org/files/files/data/noaa/g02173/eicken_leads_landfast_2006.pdf).\n",
     "\n",
     "\n",
     "### Why Care About Landfast Sea Ice?\n",
@@ -42,10 +42,10 @@
     "\n",
     "SLIE data are available from this dataset via annual ice season (e.g., 1997-1997) geodatabase `.mbd` files that are compressed into `.zip` files and are located in the `landfast1996-2004/annual_geodb` directory.\n",
     "\n",
-    "The landfast ice extent rasters are avilable via GeoTIFFs in the `landfast1996-2004/data/binarized_geotiffs` directory. Each `.tif` should have an accompanying `.tfw` file that includes important geographic information. Landast ice extent is also summarized by monthy mean, meadian, maximum, and minimum, are available in gridded or vecotirzed format. These are in the `landfast1996- 2004/monthly_averages` directory.\n",
+    "The landfast ice extent rasters are available via GeoTIFFs in the `landfast1996-2004/data/binarized_geotiffs` directory. Each `.tif` should have an accompanying `.tfw` file that includes important geographic information. Landfast ice extent is also summarized by monthly mean, median, maximum, and minimum, are available in gridded or vectorized format. These are in the `landfast1996- 2004/monthly_averages` directory.\n",
     "\n",
     "\n",
-    "Note that the source data (the original RADARSAT-1 SAR imagery) is also available from this dataset, but these data are outside the scope of this intial EDA.\n",
+    "Note that the source data (the original RADARSAT-1 SAR imagery) is also available from this dataset, but these data are outside the scope of this initial EDA.\n",
     "\n",
     "\n",
     "## Leads\n",
@@ -56,7 +56,7 @@
     "Extent is slightly larger than the landfast ice extent variable. Spatial resolution is 1.1 km.\n",
     "\n",
     "### Temporal Atrributes\n",
-    "Eleven annnual (1993-2004) ice cycles are encompassed by these data. Unlike landfast ice extent, the data sequence is irregular at times due to cloud coverage. December to June encompass the majority of the data aquisitions.\n",
+    "Eleven annual (1993-2004) ice cycles are encompassed by these data. Unlike landfast ice extent, the data sequence is irregular at times due to cloud coverage. December to June encompass the majority of the data acquisitions.\n",
     "\n",
     "### Origin\n",
     "Leads data were derived from approximately 385 Advanced Very High Resolution Radiometer (AVHRR) images. Unlike SAR, the AVHRR sensor is sensitive to atmospheric conditions and sunlight. Both visible spectrum and infrared (IR) images were used to delineate leads from land and sea ice. For the period of these data, AVHRR instruments were aboard the  following satellites: NOAA-12, NOAA-14, NOAA-15, NOAA-16, and NOAA-17. The radiometer wavelengths (e.g, aboard NOAA-15) include six channels visible (0.58-0.68 µm), near-IR (0.725-1.0 µm), near-IR (1.58-1.64 µm), IR (3.55-3.93 µm), IR (10.3-11.3 µm) and a si(11.5-12.5 µm).[9]\n",
@@ -1668,7 +1668,7 @@
    "source": [
     "The annual subdirectories within the `data` directory contain two primary types of files.\n",
     "\n",
-    "First there are files with the the `mos` suffix which should refer to mosaics of the source SAR backscatter data. These mosaics also drive the time schema: a file name of `r97_363_365mos.tif` is of a `YY_DDD_DDD` format where the day is given in the day of the year. Each file has a range of days because it encompasses information from several satellite passes which were then sitched together. Second, and corresponding to this time schema, are shapefiles of the landfast ice extent. These files have a start date that correpsonds to the start day of the mosaic GeoTIFF.\n",
+    "First there are files with the the `mos` suffix which should refer to mosaics of the source SAR backscatter data. These mosaics also drive the time schema: a file name of `r97_363_365mos.tif` is of a `YY_DDD_DDD` format where the day is given in the day of the year. Each file has a range of days because it encompasses information from several satellite passes which were then stitched together. Second, and corresponding to this time schema, are shapefiles of the landfast ice extent. These files have a start date that corresponds to the start day of the mosaic GeoTIFF.\n",
     "\n",
     "Note that there are many auxiliary files in this directory: the usual shapefile ones, but also some raster pyramids (`.rrd`) and browse `.jpg` images. Also notice the `.e00` format. The `.e00` format is an old-school format for proprietary ESRI ArcInfo Interchange files. They were used to transfer data (think floppy disk era) but are basically ASCII grids.\n",
     "\n",
@@ -2056,7 +2056,7 @@
    "id": "f190e573",
    "metadata": {},
    "source": [
-    "OK something to keep in mind - we only have one mosaic from the beginning of the window of stablity (~20 days) during which the landfast sea ice extent was able to be detected. This is why the mosaic range is DOY 025 to 029 but the landfast sea ice extent is for DOY range 025 to 051, a 26 day period. When we look the binarized GeoTIFFs next we should see the latter date range."
+    "OK something to keep in mind - we only have one mosaic from the beginning of the window of stability (~20 days) during which the landfast sea ice extent was able to be detected. This is why the mosaic range is DOY 025 to 029 but the landfast sea ice extent is for DOY range 025 to 051, a 26 day period. When we look the binarized GeoTIFFs next we should see the latter date range."
    ]
   },
   {
@@ -3218,7 +3218,7 @@
    "id": "5393f279",
    "metadata": {},
    "source": [
-    "These are basically \"ArcInfo\" grids and friends. We don't want it because we have the same information in GeoTIFF format. The only thing we might want from the `monthly_averages` are the GeoTIFFs that represent the monthly min, max, mean, and meadian landfast ice extent."
+    "These are basically \"ArcInfo\" grids and friends. We don't want it because we have the same information in GeoTIFF format. The only thing we might want from the `monthly_averages` are the GeoTIFFs that represent the monthly min, max, mean, and median landfast ice extent."
    ]
   },
   {
@@ -3287,7 +3287,9 @@
    "cell_type": "code",
    "execution_count": 66,
    "id": "b12b7bf2",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3352,7 +3354,7 @@
     "└── monthly_averages\n",
     "```\n",
     "\n",
-    "Binarized geotiffs are the priority. We'll need to prescribe a good CRS for everything, and make sure the unique values, no data values, dimensions, and affine transformations are all synced but otherwise I don't see big barriers to ingesting these data. Other than the \"leads\" dataset which is omitted for now, I don't think we need any of the other directories (shapefiles, databases, grids, etc.)."
+    "Binarized GeoTIFFs are the priority. We'll need to prescribe a good CRS for everything, and make sure the unique values, no data values, dimensions, and affine transformations are all synced but otherwise I don't see big barriers to ingesting these data. Other than the \"leads\" dataset which is omitted for now, I don't think we need any of the other directories (shapefiles, databases, grids, etc.)."
    ]
   },
   {
