--- a/seaice/landfast_mahoney.ipynb
+++ b/seaice/landfast_mahoney.ipynb
@@ -19,14 +19,14 @@
     "### What to know about these data\n",
     "\n",
     "* What\n",
-    "  * Landfast ice is sea ice that is continguous to the coast and is stable for approximately 20 days.\n",
+    "  * Landfast ice is sea ice that is contiguous to the coast and is stable for approximately 20 days.\n",
     "  * Islands are excluded except for Herschel and Barter Islands.\n",
     "* Where\n",
     "  * The spatial domain is northern Alaska and northwestern Canada and Point Barrow marks the boundary between the Chukchi and Beaufort Seas.\n",
     "* When\n",
     "  * The data represent eight annual (1996-2004) landfast ice cycles that span October to July.\n",
     "* How\n",
-    "  * The data are derived from RADARSAT-1 data aquired using the the high-resolution ScanSAR operation mode of the synthetic aperture radar (SAR) sensor.\n",
+    "  * The data are derived from RADARSAT-1 data acquired using the the high-resolution ScanSAR operation mode of the synthetic aperture radar (SAR) sensor.\n",
     "    * C-Band (5.3 GHz), 5.6 cm wavelength, HH polarization\n",
     "    * The satellite can \"see\" landfast ice because it has a distinct backscatter signature.\n",
     "    * There is an average 10-day period between SAR mosaics.\n",
@@ -37,11 +37,11 @@
     "#### Key Acronyms\n",
     " - SLIE: Seaward Looking Landfast Ice Edge\n",
     " - LFIW: Landfast Ice Width\n",
-    " - SAR: Synthetic Aperature Radar\n",
+    " - SAR: Synthetic Aperture Radar\n",
     "- - - -\n",
     "## Data Expectations\n",
     "### Data Variables\n",
-    "* SLIE (a line representing the minimum offshore extent of continguous stationary ice during the three mosaic (~20 day) period)\n",
+    "* SLIE (a line representing the minimum offshore extent of contiguous stationary ice during the three mosaic (~20 day) period)\n",
     "  * Details\n",
     "    * Seaward and inshore (spring only) edges are distinguished.\n",
     "    * Advancing SLIE is assigned the mean date of the first of the three mosaics.\n",
@@ -61,7 +61,7 @@
     "* LFIW (Landfast Ice Width)\n",
     "  * Details\n",
     "    * Measured along transects (N=1935) where distance between the coast and the SLIE was measured.\n",
-    "      * These transects were thena baainned into 200 groups for which means were calculated.\n",
+    "      * These transects were then binned into 200 groups for which means were calculated.\n",
     "  * Data Formats and Volumes\n",
     "    * There should be 200 point locations that contain a time series of LFIW.\n",
     "    * Ideally these are in a tabular format (CSV) or some point vector geometry (.shp).\n",
@@ -72,10 +72,10 @@
     "      * Assume that water depths in which the SLIE is most frequently observed correspond to depths in which the SLIE is most stable\n",
     "    * Flavors\n",
     "      * Modal Water Depth by Month\n",
-    "* Key Events in the annual ice cyclea\n",
+    "* Key Events in the annual ice cycle\n",
     "  * Details\n",
     "    * The 200 coastal point locations used to bin the transects have time series data to identify the key events in the ice cycle, including:\n",
-    "      1. The first ice on coasts (first occurence of more than 500 m of ice at the coast)\n",
+    "      1. The first ice on coasts (first occurrence of more than 500 m of ice at the coast)\n",
     "      2. onset of stable landfast ice (stable period is the longest period in which the SLIE occupies water of 15 m or deeper).\n",
     "      3. Breakup (fastest reduction in LFIW during the tail of the season when landfast ice is no longer advancing)\n",
     "      4. Ice-free coasts (LFIW is less than 500 m).\n",
@@ -92,7 +92,7 @@
    "metadata": {},
    "source": [
     "## Data Digging\n",
-    "This notebook assumes that these data are copied to `$SCRATCH_DIR`. Set this environment variable via your shell or just run the code cell below to do the same thing. Note that the `GDAL_DATA` and `PROJ_LIB` environment variables may not be set when the environment is activated (possible anaconda-project issue) if they are already set in the parent conda env. You can set them explicitly here if needed. "
+    "This notebook assumes that these data are copied to `$SCRATCH_DIR`. Set this environment variable via your shell or just run the code cell below to do the same thing. Note that the `GDAL_DATA` and `PROJ_LIB` environment variables may not be set when the environment is activated (possible anaconda-project issue) if they are already set in the parent `conda` env. You can set them explicitly here if needed. "
    ]
   },
   {
@@ -278,7 +278,7 @@
    "id": "bca53425",
    "metadata": {},
    "source": [
-    "This directory comparison is actually quite promising - we see the key variables that we expect from our background reading of the paper (SLIE, LFIW, and Water Depth (convention appears to be `wdep`). The SLIE data are in GeoTIFF format, and it appears that the individual landfast ice scenes and stacked annual summaries are also available. The Water Depth and LFIW data are tabular, and we'd expect 200 records, one for each transect bucket, or 1500 + records, one for each transect. It appears there are some statistical summaries for each of these also. I'm guessing that the `reg` and `mo` naming conventions in those .csv filenames stand for `region` and `monthly`, respectively. Finally, note that these two directories contain a different number of files. This is expected and caused by differences in the satellite revist frequency. However, not all things are equal between the Beaufort and Chukchi regions, as there are directories for 1996-87 and 1997-98 in the Chukchi directory, but not the Beaufort. Also, there are some oddball data structures where the two regions both have data. Consider the case of the 1999-2000 ice season:"
+    "This directory comparison is actually quite promising - we see the key variables that we expect from our background reading of the paper (SLIE, LFIW, and Water Depth (convention appears to be `wdep`). The SLIE data are in GeoTIFF format, and it appears that the individual landfast ice scenes and stacked annual summaries are also available. The Water Depth and LFIW data are tabular, and we'd expect 200 records, one for each transect bucket, or 1500 + records, one for each transect. It appears there are some statistical summaries for each of these also. I'm guessing that the `reg` and `mo` naming conventions in those .csv filenames stand for `region` and `monthly`, respectively. Finally, note that these two directories contain a different number of files. This is expected and caused by differences in the satellite revisit frequency. However, not all things are equal between the Beaufort and Chukchi regions, as there are directories for 1996-87 and 1997-98 in the Chukchi directory, but not the Beaufort. Also, there are some oddball data structures where the two regions both have data. Consider the case of the 1999-2000 ice season:"
    ]
   },
   {
@@ -446,7 +446,7 @@
    "id": "63124438",
    "metadata": {},
    "source": [
-    "OK these directories have some important-looking monthly summaries that definitely correspond to the monthly summary SLIE data we identified in our initial data expectations. We might be able to reproduce these data from the seasonal data. We'll definitely revist these directories!"
+    "OK these directories have some important-looking monthly summaries that definitely correspond to the monthly summary SLIE data we identified in our initial data expectations. We might be able to reproduce these data from the seasonal data. We'll definitely revisit these directories!"
    ]
   },
   {
@@ -456,7 +456,7 @@
    "source": [
     "### Data Puzzle Number 1: What's up with the mosaics?\n",
     "\n",
-    "There seem to be two main types of raster data here: SLIE (`_slie` suffix) and mosaics (`_mos` suffix) for the Beaufort region. We should understand how the `mos` files differ from the `_slie` files. We should also know how the different SLIE `stack` flavors differ within each region and ice season. First, let's look at the mosaic data. How many files are there? What is in them? I'm *guessing* these are just the mosaiced and processed backscatter images, and we might actually not need them in the curated version of the dataset because they're a low-level product and not available for all regions and seasons."
+    "There seem to be two main types of raster data here: SLIE (`_slie` suffix) and mosaics (`_mos` suffix) for the Beaufort region. We should understand how the `mos` files differ from the `_slie` files. We should also know how the different SLIE `stack` flavors differ within each region and ice season. First, let's look at the mosaic data. How many files are there? What is in them? I'm *guessing* these are just the mosaicked and processed backscatter images, and we might actually not need them in the curated version of the dataset because they're a low-level product and not available for all regions and seasons."
    ]
   },
   {
@@ -537,7 +537,7 @@
    "id": "92bf6576",
    "metadata": {},
    "source": [
-    "OK it clear that we are missing mosaic geotiffs for many ice seasons and for all of the Chukchi region. I'm not too concerned about this because I think it confirms that these are a lower-level data product that won't be a fit for the ultimate curated collection. The full count of mosaics should be closer to the N=238 described in the publication. But, to be on the safe side we can pop a few of these GeoTIFFs open and take a look."
+    "OK it clear that we are missing mosaic GeoTIFFs for many ice seasons and for all of the Chukchi region. I'm not too concerned about this because I think it confirms that these are a lower-level data product that won't be a fit for the ultimate curated collection. The full count of mosaics should be closer to the N=238 described in the publication. But, to be on the safe side we can pop a few of these GeoTIFFs open and take a look."
    ]
   },
   {
@@ -2387,7 +2387,7 @@
    "source": [
     "From this DataFrame we can see that the Beaufort stacked files are consistent in dimension (`9554 x 3298`) and pixel size (`100 m`), although some scenes have different affine transformations. We'll want to take a closer look at the scenes that depart from the majority affine transformation Also, all of these scenes lack a \"NoData\" value. We'll want to assign one in pre-processing if we use these stacked data.\n",
     "\n",
-    "We can also see that the value range has changed from the 0-255 range of the individual scenes - all values are now somewhere between 0 and 35. We'll need to do some interpretation to figure out what these values mean. My guess: the values correspond to the total number of individual SLIE files for a given ice season. The pixel value is essentialy the count of the number of times a certain pixel was observed to be covered by landfast sea ice. This also explains why each ice season has a different value.\n",
+    "We can also see that the value range has changed from the 0-255 range of the individual scenes - all values are now somewhere between 0 and 35. We'll need to do some interpretation to figure out what these values mean. My guess: the values correspond to the total number of individual SLIE files for a given ice season. The pixel value is essentially the count of the number of times a certain pixel was observed to be covered by landfast sea ice. This also explains why each ice season has a different value.\n",
     "\n",
     "I'm still not sure what the difference in the stack flavors (i.e., the \"color\" and \"edge\" file conventions) means. Each ice season has three stack files: vanilla, \"Edgestack\", and \"color+edge.\" The latter has  the greatest value range (max. value is increased by 2).\n",
     "\n",
@@ -2749,7 +2749,7 @@
    "id": "56689e0e",
    "metadata": {},
    "source": [
-    "I'm suprised by the range of values in the \"edgestack\" variation."
+    "I'm surprised by the range of values in the \"edgestack\" variation."
    ]
   },
   {
@@ -2906,7 +2906,7 @@
    "id": "68248c8d",
    "metadata": {},
    "source": [
-    "I think these are counts of where the landfast ice edge is. So if the value is 5, the ice edge was recorded to be in that location for 5 observation windows. For the color plus edge flavor of SLIE, the edges are indicated with the pentultimate maximum value of the dataset. The maximum value is reserved for the landmask. The edges are basically contours. We need to do the same analysis for the Chukchi dataset."
+    "I think these are counts of where the landfast ice edge is. So if the value is 5, the ice edge was recorded to be in that location for 5 observation windows. For the color plus edge flavor of SLIE, the edges are indicated with the penultimate maximum value of the dataset. The maximum value is reserved for the landmask. The edges are basically contours. We need to do the same analysis for the Chukchi dataset."
    ]
   },
   {
@@ -3242,7 +3242,7 @@
    "id": "4f72ddd0",
    "metadata": {},
    "source": [
-    "OK well at least the data have consistent value ranges, pixel sizes, and affine transformations, although we do have some CRS jank at play for some (4) of the files. Beaufort data have the same issue. These are also different from the Rasterio CRS WKT for 3338. We probably want to converge on the latter for all of these."
+    "OK well at least the data have consistent value ranges, pixel sizes, and affine transformations, although we do have some CRS oddness at play for some (4) of the files. Beaufort data have the same issue. These are also different from the Rasterio CRS WKT for 3338. We probably want to converge on the latter for all of these."
    ]
   },
   {
@@ -3384,7 +3384,7 @@
    "id": "fc264da1",
    "metadata": {},
    "source": [
-    "The Chukchi edge data is missing for 2007-08, while 2003-04 and 2005-06 are missing a geotiff. We should plot a few of these data too."
+    "The Chukchi edge data is missing for 2007-08, while 2003-04 and 2005-06 are missing a GeoTIFF. We should plot a few of these data too."
    ]
   },
   {
@@ -4754,7 +4754,7 @@
    "id": "44948a5c-85d3-4d3d-8479-dca36dcfa464",
    "metadata": {},
    "source": [
-    "So for each ice season, there is a CSV with the lanfast ice width computed from the individual SLIE (derived from the ~20 day period). Then we have the regional and regional monthly mean and standard deviation statistics. One problem I see with these data is that we are missing geospatial coordinates. The only spatial reference is the string description of a zone, like PointHope-CapeLisbrune. But maybe coordinates are lurking somewhere and we should look at the \"All Season\" flavors of this data too."
+    "So for each ice season, there is a CSV with the landfast ice width computed from the individual SLIE (derived from the ~20 day period). Then we have the regional and regional monthly mean and standard deviation statistics. One problem I see with these data is that we are missing geospatial coordinates. The only spatial reference is the string description of a zone, like \"PointHope-CapeLisburne\". But maybe coordinates are lurking somewhere and we should look at the \"All Season\" flavors of this data too."
    ]
   },
   {
@@ -5036,7 +5036,9 @@
    "cell_type": "code",
    "execution_count": 26,
    "id": "e6add383",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
