--- a/alfresco/pipeline/qc.ipynb
+++ b/alfresco/pipeline/qc.ipynb
@@ -233,7 +233,7 @@
    "id": "490e9c54",
    "metadata": {},
    "source": [
-    "Observe that the `TIFFTAG_IMAGEDESCRIPTION` and `TIFFTAG_SOFTWARE` tags are being used to communicate import information about these GeoTIFFs, including:\n",
+    "Observe that the `TIFFTAG_IMAGEDESCRIPTION` and `TIFFTAG_SOFTWARE` tags are being used to communicate important information about these GeoTIFFs, including:\n",
     "\n",
     "- the version of ALFRESCO that was used to generated the GeoTIFFs\n",
     "- what the values represent\n",
