cleanup and successful runs for wf and ws variables

--- a/ncar12km_decadal_summaries/archive/ncar_testbed.ipynb
+++ b/ncar12km_decadal_summaries/archive/ncar_testbed.ipynb
@@ -98,6 +98,18 @@
     "    dec_mean_monthly_summary = out.compute()\n",
     "    return dec_mean_monthly_summary\n",
     "\n",
+    "def compute_monthly_summaries(decade_slice, met_or_wf_or_ws, climvar):\n",
+    "    \n",
+    "    summary_func = variable_di[var_group][met_or_wf_or_ws][climvar]\n",
+    "    out = (\n",
+    "        decade_slice[climvar]\n",
+    "        .resample(time=\"1M\")\n",
+    "        .reduce(summary_func)\n",
+    "        .groupby(\"time.month\")\n",
+    "        .reduce(np.mean)  # decadal summary is always a mean\n",
+    "    )\n",
+    "    dec_mean_monthly_summary = out.compute()\n",
+    "    return dec_mean_monthly_summary\n",
     "\n",
     "def prep_monthly_output_data(dec_mean_monthly_summary, climvar, mo):\n",
     "    # we lose the orientation from xr and it flips upside down\n",
