run all groups using compute_summaries module

--- a/ncar12km_decadal_summaries/exploratory_data_analysis.ipynb
+++ b/ncar12km_decadal_summaries/exploratory_data_analysis.ipynb
@@ -32,7 +32,7 @@
     " \n",
     "These variables are downscaled climate model output - they are not created by the VIC hydrologic model. The VIC outputs have filenames like `MRI-CGCM3_rcp85_BCSD_ws_2094.nc`, `GFDL-ESM2M_rcp85_BCSD_wf_2035.nc` and `CSIRO-Mk3-6-0_rcp85_BCSD_eb_2044.nc` where the tags `wf`, `ws` and `eb` are a shorthand that indicate what types of variables exist within thos file sets. The scheme is as follows:\n",
     "\n",
-    " - `ws` (water source / state)\n",
+    " - `ws` (water state)\n",
     "   - SWE (Snow water equivalent, mm)\n",
     "   - IWE (Ice water equivalent, mm)\n",
     "   - SM1 (Soil moisture layer1, mm)\n",
@@ -40,7 +40,7 @@
     "   - SM3 (Soil moisture layer3, mm)\n",
     "   - WATER_ERROR (water balance error, mm)\n",
     "   \n",
-    " - `wf` (water flow / rate)\n",
+    " - `wf` (water flux)\n",
     "   - RUNOFF (surface runoff, mm per day)\n",
     "   - BASEFLOW (baseflow, mm per day)\n",
     "   - EVAP (actual evapotranspiration, mm per day)\n",
