--- a/ncar12km_decadal_summaries/zipper.ipynb
+++ b/ncar12km_decadal_summaries/zipper.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7406e3f6-2bfe-46fc-8930-4ef651f4b502",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7949e420-a11d-4259-b477-cdab65d72d81",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
        "PosixPath('/atlas_scratch/cparr4/AK_NCAR_12km_decadal_means_of_monthly_summaries/reprojected_geotiffs')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "005c846e-1ced-48b6-b0e3-e8d881431323",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
        "PosixPath('/atlas_scratch/cparr4/AK_NCAR_12km_decadal_means_of_monthly_summaries/zipped')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,48 +64,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "614b253d-11b9-4bb0-a26c-3d1fe8b7930a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "IOPub data rate exceeded.\n",
-      "The Jupyter server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--ServerApp.iopub_data_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "ServerApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
-      "ServerApp.rate_limit_window=3.0 (secs)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "command = f\"bash ./zipit.sh {reprojected_dir} {zip_dir}\"\n",
     "\n",
-    "output = subprocess.check_output(command, shell=True)\n",
-    "\n",
-    "print(output.decode())"
+    "output = subprocess.check_output(command, shell=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "3d2d71be-5b62-40d1-beba-043705826087",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[PosixPath('/atlas_scratch/cparr4/AK_NCAR_12km_decadal_means_of_monthly_summaries/zipped/pcp.zip'),\n",
-       " PosixPath('/atlas_scratch/cparr4/AK_NCAR_12km_decadal_means_of_monthly_summaries/zipped/snow_melt.zip'),\n",
-       " PosixPath('/atlas_scratch/cparr4/AK_NCAR_12km_decadal_means_of_monthly_summaries/zipped/evap.zip'),\n",
-       " PosixPath('/atlas_scratch/cparr4/AK_NCAR_12km_decadal_means_of_monthly_summaries/zipped/glacier_melt.zip'),\n",
+       "[PosixPath('/atlas_scratch/cparr4/AK_NCAR_12km_decadal_means_of_monthly_summaries/zipped/glacier_melt.zip'),\n",
        " PosixPath('/atlas_scratch/cparr4/AK_NCAR_12km_decadal_means_of_monthly_summaries/zipped/runoff.zip'),\n",
        " PosixPath('/atlas_scratch/cparr4/AK_NCAR_12km_decadal_means_of_monthly_summaries/zipped/tmin.zip'),\n",
        " PosixPath('/atlas_scratch/cparr4/AK_NCAR_12km_decadal_means_of_monthly_summaries/zipped/tmax.zip'),\n",
@@ -113,10 +91,13 @@
        " PosixPath('/atlas_scratch/cparr4/AK_NCAR_12km_decadal_means_of_monthly_summaries/zipped/sm2.zip'),\n",
        " PosixPath('/atlas_scratch/cparr4/AK_NCAR_12km_decadal_means_of_monthly_summaries/zipped/sm3.zip'),\n",
        " PosixPath('/atlas_scratch/cparr4/AK_NCAR_12km_decadal_means_of_monthly_summaries/zipped/iwe.zip'),\n",
-       " PosixPath('/atlas_scratch/cparr4/AK_NCAR_12km_decadal_means_of_monthly_summaries/zipped/swe.zip')]"
+       " PosixPath('/atlas_scratch/cparr4/AK_NCAR_12km_decadal_means_of_monthly_summaries/zipped/swe.zip'),\n",
+       " PosixPath('/atlas_scratch/cparr4/AK_NCAR_12km_decadal_means_of_monthly_summaries/zipped/pcp.zip'),\n",
+       " PosixPath('/atlas_scratch/cparr4/AK_NCAR_12km_decadal_means_of_monthly_summaries/zipped/snow_melt.zip'),\n",
+       " PosixPath('/atlas_scratch/cparr4/AK_NCAR_12km_decadal_means_of_monthly_summaries/zipped/evap.zip')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "c143c48f-3579-45ad-b10d-16ba7bb847e3",
    "metadata": {},
    "outputs": [],
